# granola-cli

./: .gitignore  LICENSE  README.md  granola_cli.py  kpvcmcnt6e9of2h8omldmugertjrtglg  manifest  pyproject.toml
docs/: progress.md  status_command_design.md
docs/plans/: 2026-04-05-meeting-analysis-cli.md
docs/prompts/: 2026_04_05_granola_cli_agent.md
granola/: client.py  config.py  db.py  export.py  formatter.py  ratelimit.py  search.py  util.py
tests/: helpers.py  test_cli.py  test_config.py  test_db.py  test_export.py  test_formatter.py  test_ratelimit.py  test_search.py  test_slug.py
