[project]
name = "granola-cli"
version = "0.1.0"
description = "CLI tool for downloading, searching, and exporting Granola notes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.11.0",
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.0.0",
  "ruff>=0.11.0",
]

[project.scripts]
granola-cli = "granola_cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["granola_cli"]
packages = ["granola"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
